tests/12-enums.stderr
error: Explicit default is required for enums.
       help: Add `#[def = "..."]` to the enum definition
 --> tests/12-enums.rs:4:6
  |
4 | enum Foo {
  |      ^^^
