tests/12-enums.rs
use defaults::Defaults;

#[derive(Defaults)]
enum Foo {
    A,
    B,
}

fn main() {}
